gap was fine but missing color was not fine. fixed.
SRFCMSAL-2032

--- a/source/_patterns/20-molecules/teaser/teaser.scss
+++ b/source/_patterns/20-molecules/teaser/teaser.scss
@@ -229,10 +229,11 @@
 }
 
 .teaser__opinion {
-  padding: 0 16px 8px;
+  padding: 8px 16px;
+  background-color: $color-bg-opinion-teaser;
 
   @include desktop-wide {
-    padding: 0 24px 8px;
+    padding: 8px 24px;
   }
 }
 
